# QLNS_GD

./: CMakeLists.txt  ClassNghiPhep.h  ClassNhanSu.h  FunctionOfClass.cpp  GD_DangNhap.cpp  GD_DangNhap.h  GD_DangNhap.ui  GD_NVChung.cpp  GD_NVChung.h  GD_NVChung.ui  GD_QLDuAn.cpp  GD_QLDuAn.h  GD_QLDuAn.ui  GD_QLPhongBan.cpp  GD_QLPhongBan.h  GD_QLPhongBan.ui  GD_Qly.cpp  GD_Qly.h  GD_Qly.ui  GD_Them.cpp  GD_Them.h  GD_Them.ui  NhanSuData.cpp  NhanSuData.h  main.cpp  style.qss
GD_NV/: GD_NVChung.cpp  GD_NVChung.ui
GD_NhanVien/: CMakeLists.txt  GD_NVChung.h  main.cpp
